fix: basic draft

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,8 @@ TODO.md
 # Manual Windows build drop folder
 dist/win32/*.exe
 dist/win32/*.pdb
+dist/win32/*_log.txt
+dist/win32/prepared_uploads/
 !dist/win32/.gitkeep
 
 
